--- a/templates/actors/partials/health.hbs
+++ b/templates/actors/partials/health.hbs
@@ -17,10 +17,10 @@
         Deterioration
         <input type="number" name="system.damage.deterioration" value="{{actor.system.damage.deterioration}}"/>
     </h4>
-    <div class="health-derived pen-grid">    
-        <span>{{localize "PENDRAGON.Healing"}}</span><span>{{actor.system.derived.healing}}</span>
-        <span>{{localize "PENDRAGON.Knockdown"}}</span><span>{{actor.system.derived.knockdown}}</span>
-        <span>{{localize "PENDRAGON.MajorWound"}}</span><span>{{actor.system.derived.majorWound}}</span>
-        <span>{{localize "PENDRAGON.Unconcious"}}</span><span>{{actor.system.derived.unconscious}}</span>
-    </div>
+    <ol class="health-derived pen-grid">    
+        <li><span>{{localize "PENDRAGON.Healing"}}</span><span>{{actor.system.derived.healing}}</span></li>
+        <li><span>{{localize "PENDRAGON.Knockdown"}}</span><span>{{actor.system.derived.knockdown}}</span></li>
+        <li><span>{{localize "PENDRAGON.MajorWound"}}</span><span>{{actor.system.derived.majorWound}}</span></li>
+        <li><span>{{localize "PENDRAGON.Unconcious"}}</span><span>{{actor.system.derived.unconscious}}</span></li>
+    </ol>
 </div>
