--- a/templates/actors/partials/joust.hbs
+++ b/templates/actors/partials/joust.hbs
@@ -1,9 +1,9 @@
 <div class="joust">
     <h3>{{localize "PENDRAGON.JoustScore"}}</h3>
     <div class="flex-container">
-        <h4>{{localize "PENDRAGON.Wins"}}</h4>
+        <span>{{localize "PENDRAGON.Wins"}}</span>
         <input type="number" name="system.joust.wins" value="{{actor.system.joust.wins}}"/>
-        <h4>{{localize "PENDRAGON.Loses"}}</h4>
+        <span>{{localize "PENDRAGON.Loses"}}</span>
         <input type="number" name="system.joust.loses" value="{{actor.system.joust.loses}}"/>
     </div>
 </div>
