--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -1,16 +1,19 @@
 .pendragon {
-  /* || VARIABLES */
+  // || VARIABLES
   @gap-large: 1em;
   @gap: 0.5em;
   @gap-small: 0.2em;
 
   @section-margin: 14px;
 
+  // Font families
+  @import "fonts.less";
+
   // Grid column widths for fixed elements
   @check-col: 20px;
   @num-col: 28px;
 
-  /* || UTILITIES */
+  // || UTILITIES
   .align-center {align-items: center;}
 
   .summarize {
@@ -24,7 +27,7 @@
     border-bottom: 1px solid;
   }
 
-  /* || CONTAINERS */
+  // || CONTAINERS
   .pen-grid > li {
     grid-template-columns: subgrid;
     grid-column-start: 1;
@@ -66,7 +69,9 @@
     padding: 3px;
   }
 
-  /* || GENERAL STYLES */
+  // || GENERAL STYLES
+  font-family: @serif;
+
   table {
     table-layout: fixed;
   }
@@ -91,6 +96,7 @@
   .header {
     position: relative;
     margin: 0 @section-margin;
+    font-family: @display;
     button {
       position: absolute;
       right: 0;
@@ -103,6 +109,10 @@
       margin: 0;
     }
   }
+
+  h1, h2, h3, h4, h5, h6 {
+    font-family: @display;
+  } 
 
   // .pen-number {
   //   position: relative;
@@ -134,7 +144,7 @@
     min-width: 2em;
   }
 
-  /* || OTHER */
+  // || OTHER
 
   .window-content {
     height: 100%;
@@ -171,6 +181,7 @@
       padding: 0px;
       margin: 5px 0;
       border-bottom: 0;
+      font-family: @display;
       input {
         width: 100%;
         height: 100%;
@@ -249,6 +260,7 @@
       .characteristics {
         label {
           margin-right: @gap-small;
+          font-family: @serif-condensed;
         }
       }
       .move-armor {
@@ -300,7 +312,6 @@
     }
   }
 
-  /* Sheet Tabs */
   .tabs {
     flex: 0 0 40px;
     border-top: 1px solid #AAA;
@@ -338,7 +349,7 @@
   }
 }
 
-/* || Sheet Minimums */
+// || Sheet Minimums
 
 .pendragon.sheet.actor {
   min-width: 560px;
