--- a/templates/actors/partials/joust.hbs
+++ b/templates/actors/partials/joust.hbs
@@ -1,9 +1,14 @@
 <div class="joust">
     <h3>{{localize "PENDRAGON.JoustScore"}}</h3>
     <div class="flex-container">
-        <span>{{localize "PENDRAGON.Wins"}}</span>
-        <input type="number" name="system.joust.wins" value="{{actor.system.joust.wins}}"/>
-        <span>{{localize "PENDRAGON.Loses"}}</span>
-        <input type="number" name="system.joust.loses" value="{{actor.system.joust.loses}}"/>
+        <span>
+            <span>{{localize "PENDRAGON.Wins"}}</span>
+            <input type="number" name="system.joust.wins" value="{{actor.system.joust.wins}}"/>
+        </span>
+        <div class="vl"></div>
+        <span>
+            <span>{{localize "PENDRAGON.Loses"}}</span>
+            <input type="number" name="system.joust.loses" value="{{actor.system.joust.loses}}"/>
+        </span>
     </div>
 </div>
