--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -27,6 +27,12 @@
     border-bottom: 1px solid;
   }
 
+  // Vertical line
+  .vl {
+    border-right: 1px solid var(--color-underline-header);
+    height: 2em;
+  }
+
   // || CONTAINERS
   .pen-grid > li {
     grid-template-columns: subgrid;
@@ -96,7 +102,6 @@
   .header {
     position: relative;
     margin: 0 @section-margin;
-    font-family: @display;
     button {
       position: absolute;
       right: 0;
@@ -213,7 +218,17 @@
 
     .joust {
       .flex-container {
-        align-items: baseline;
+        align-items: center;
+        column-gap: @gap-small;
+        input {
+          background: #0000;
+          border: 0;
+          border-radius: 0;
+          text-decoration: underline;
+        }
+        .vl {
+          margin-right: @gap;
+        }
       }
     }
   }
