removed unused fonts

--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Almendra&family=Cormorant+Garamond&family=EB+Garamond&family=Caudex&family=Enriqueta&family=Lora&family=Felipa&family=Forum&family=Gilda+Display&family=Grenze+Gotisch&family=Hina+Mincho&family=Lancelot&family=Piazzolla&family=Quattrocento&family=Quintessential&family=Radley&family=Roboto&family=Rufina&family=Simonetta&family=Tapestry&family=Texturina&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Almendra&family=Cormorant+Garamond&family=EB+Garamond&family=Caudex&family=Enriqueta&family=Lora&family=Felipa&family=Forum&family=Gilda+Display&family=Grenze+Gotisch&family=Hina+Mincho&family=Lancelot&family=Piazzolla&family=Quattrocento&family=Quintessential&family=Radley&family=Roboto&family=Rufina&family=Simonetta&family=Tapestry&family=Texturina&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caudex&family=Lora&family=Hina+Mincho&display=swap');
 // font-family: 'Almendra', serif; whimsy
 // font-family: 'Caudex', serif; looks nice on set labels, but not readable small
 // font-family: 'Enriqueta', serif;
@@ -28,5 +29,5 @@
 
 @serif: 'Caudex', Times, "Time New Roman", Garamond, serif;
 @serif-condensed: 'Hina Mincho', serif;
-@sans-serif: 'Roboto', Helvetica, Verdana, sans-serif;
+// @sans-serif: 'Roboto', Helvetica, Verdana, sans-serif;
 @display: 'Lora', Georgia, serif;
