--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -76,6 +76,11 @@
   }
 
   // || GENERAL STYLES
+  ul, ol {
+    padding: 0;
+    margin: 0;
+  }
+
   font-family: @serif;
 
   table {
@@ -302,8 +307,14 @@
     }
 
     .health {
+      .other-damage {
+        grid-template-columns: max-content @num-col;
+        li {
+          justify-items: end;
+        }
+      }
       .health-derived {
-        grid-template-columns: 1fr 28px;
+        grid-template-columns: max-content 28px;
         :nth-child(odd) {
           justify-self: start;
         }
