added styling for small text

--- a/templates/actors/partials/health.hbs
+++ b/templates/actors/partials/health.hbs
@@ -19,7 +19,7 @@
             <input type="number" name="system.damage.deterioration" value="{{actor.system.damage.deterioration}}"/>
         </li>
     </ol>
-    <ol class="health-derived pen-grid">    
+    <ol class="health-derived pen-grid small-text">    
         <li><span>{{localize "PENDRAGON.Healing"}}</span><span>{{actor.system.derived.healing}}</span></li>
         <li><span>{{localize "PENDRAGON.Knockdown"}}</span><span>{{actor.system.derived.knockdown}}</span></li>
         <li><span>{{localize "PENDRAGON.MajorWound"}}</span><span>{{actor.system.derived.majorWound}}</span></li>
