--- a/templates/actors/partials/personal.hbs
+++ b/templates/actors/partials/personal.hbs
@@ -1,4 +1,4 @@
-<div class="personal">
+<div class="personal small-text">
     {{#each actor.system.personal}}
     <div {{#ifEquals @key "distinctiveFeatures"}}class="features"{{/ifEquals}}>
         <label>{{localize (concat "PENDRAGON." (capital @key))}}</label>
