--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -27,6 +27,11 @@
     border-bottom: 1px solid;
   }
 
+  .small-text {
+    font-size: 0.8em;
+    font-family: @serif-small;
+  }
+
   // Vertical line
   .vl {
     border-right: 1px solid var(--color-underline-header);
