--- a/templates/actors/partials/weapons.hbs
+++ b/templates/actors/partials/weapons.hbs
@@ -3,12 +3,12 @@
     <li>
         <img src="{{this.img}}" title="{{this.name}}"/>
         <label class="summarize">{{this.name}}</label>
-        <label>
+        <label class="small-text">
             {{#with (lookup ../actor.system.skills.combat system.skill)}}
             {{value}}
             {{/with}}
         </label>
-        <label class="summarize formula">{{this.system.formula}}</label>
+        <label class="summarize formula small-text">{{this.system.formula}}</label>
         <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
         <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
     </li>
