updating to match other sections

--- a/templates/actors/tabs/combat-tab.hbs
+++ b/templates/actors/tabs/combat-tab.hbs
@@ -39,7 +39,9 @@
             </section>
 
             {{!-- Wounds --}}
-            {{> "systems/pendragon6/templates/actors/partials/wounds.hbs"}}
+            <section>
+                {{> "systems/pendragon6/templates/actors/partials/wounds.hbs"}}
+            </section>
 
         </div>
     </div>
