--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -22,6 +22,13 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/lora/v32/0QI6MX1D_JOuGQbT0gvTJPa787weuyJG.ttf) format('truetype');
 }
+@font-face {
+  font-family: 'Simonetta';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/simonetta/v27/x3dickHVYrCU5BU15c4BfA.ttf) format('truetype');
+}
 .pendragon .align-center {
   align-items: center;
 }
@@ -33,6 +40,10 @@
 }
 .pendragon .underline {
   border-bottom: 1px solid;
+}
+.pendragon .small-text {
+  font-size: 0.8em;
+  font-family: 'Simonetta', serif;
 }
 .pendragon .vl {
   border-right: 1px solid var(--color-underline-header);
@@ -187,12 +198,10 @@
   align-items: baseline;
 }
 .pendragon .sheet-header .personal label {
-  font-size: 0.8em;
   padding-right: 0.5em;
 }
 .pendragon .sheet-header .personal input {
   height: 1.2em;
-  font-size: 1em;
 }
 .pendragon .sheet-header .personal .features {
   grid-column: 1 / span 2;
@@ -288,6 +297,9 @@
 }
 .pendragon .tab.combat .wounds thead > tr :nth-child(1) {
   width: 30px;
+}
+.pendragon .tab.history table {
+  margin: 14px 0;
 }
 .pendragon .tab.history .passive-glory {
   grid-template-columns: min-content 28px;
